--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
   "bugs": {
     "url": "https://github.com/ShawonAshraf/LocalFileServer/issues"
   },
-  "homepage": "https://github.com/ShawonAshraf/LocalFileServer#readme"
+  "homepage": "https://github.com/ShawonAshraf/LocalFileServer#readme",
+  "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "express": "^4.16.3"
+  }
 }
