--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "rimraf": "^2.6.2"
     },
     "devDependencies": {
+        "eslint": "^4.19.1",
         "expect": "^1.20.2",
         "mocha": "^5.2.0",
         "nodemon": "^1.17.5",
