--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "babel-cli": "^6.26.0",
         "babel-preset-env": "^1.7.0",
         "express": "^4.16.3",
+        "hbs": "^4.0.1",
         "morgan": "^1.9.0",
         "rimraf": "^2.6.2"
     },
