--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "start": "npm run build && node dist/server.js",
         "start-watch": "nodemon --exec babel-node -- server",
         "build": "rimraf dist/ && babel ./ --out-dir dist/ --ignore ./node_modules,./.babelrc,./package.json,./npm-debug.log --copy-files",
-        "test": "mocha --require babel-core/register ./**/*.test.js",
+        "test": "mocha --require babel-core/register ./**/*.test.js --exit",
         "test-watch": "export NODE_ENV=test && nodemon --exec \"npm test\""
     },
     "repository": {
