--- a/package.json
+++ b/package.json
@@ -1,42 +1,45 @@
 {
-    "name": "local-file-server",
-    "version": "1.0.0",
-    "description": "For serving files on a server running on the local network. (Files are read-only)",
-    "main": "index.js",
-    "scripts": {
-        "start": "npm run build && node dist/server.js",
-        "start-watch": "nodemon --exec babel-node -- server",
-        "build": "rimraf dist/ && babel ./ --out-dir dist/ --ignore ./node_modules,./.babelrc,./package.json,./npm-debug.log --copy-files",
-        "test": "mocha --require babel-core/register ./**/*.test.js --exit",
-        "test-watch": "export NODE_ENV=test && nodemon --exec \"npm test\""
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/ShawonAshraf/LocalFileServer.git"
-    },
-    "keywords": [
-        "fileserver",
-        "filesystem"
-    ],
-    "author": "Shawon Ashraf",
-    "license": "MIT",
-    "bugs": {
-        "url": "https://github.com/ShawonAshraf/LocalFileServer/issues"
-    },
-    "homepage": "https://github.com/ShawonAshraf/LocalFileServer#readme",
-    "dependencies": {
-        "babel-cli": "^6.26.0",
-        "babel-preset-env": "^1.7.0",
-        "express": "^4.16.3",
-        "hbs": "^4.0.1",
-        "morgan": "^1.9.0",
-        "rimraf": "^2.6.2"
-    },
-    "devDependencies": {
-        "eslint": "^4.19.1",
-        "expect": "^1.20.2",
-        "mocha": "^5.2.0",
-        "nodemon": "^1.17.5",
-        "supertest": "^3.1.0"
-    }
+  "name": "local-file-server",
+  "version": "1.0.0",
+  "description": "For serving files on a server running on the local network. (Files are read-only)",
+  "main": "index.js",
+  "scripts": {
+    "start": "npm run build && node dist/server.js",
+    "start-watch": "nodemon --exec babel-node -- server",
+    "build": "rimraf dist/ && babel ./ --out-dir dist/ --ignore ./node_modules,./.babelrc,./package.json,./npm-debug.log --copy-files",
+    "test": "mocha --require babel-core/register ./**/*.test.js --exit",
+    "test-watch": "export NODE_ENV=test && nodemon --exec \"npm test\"",
+    "eslint-setup": "./node_modules/.bin/eslint --init"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ShawonAshraf/LocalFileServer.git"
+  },
+  "keywords": [
+    "fileserver",
+    "filesystem"
+  ],
+  "author": "Shawon Ashraf",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/ShawonAshraf/LocalFileServer/issues"
+  },
+  "homepage": "https://github.com/ShawonAshraf/LocalFileServer#readme",
+  "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "express": "^4.16.3",
+    "hbs": "^4.0.1",
+    "morgan": "^1.9.0",
+    "rimraf": "^2.6.2"
+  },
+  "devDependencies": {
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "expect": "^1.20.2",
+    "mocha": "^5.2.0",
+    "nodemon": "^1.17.5",
+    "supertest": "^3.1.0"
+  }
 }
