--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: node_js
 node_js:
-  - "8.11.4"
+  - "10"
 install:
-  - npm install
+  - yarn install
 script:
-  - npm test
+  - yarn test
