--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "For serving files on a server running on the local network. (Files are read-only)",
   "main": "index.js",
   "scripts": {
-    "start": "npm run build && node dist/server.js",
+    "start": "yarn run build && node dist/server.js",
     "start-watch": "nodemon --exec babel-node -- server",
     "build": "rimraf dist/ && babel ./ --out-dir dist/ --ignore ./node_modules,./.babelrc,./package.json,./npm-debug.log --copy-files",
     "test": "mocha --require babel-core/register ./**/*.test.js --exit",
@@ -23,20 +23,21 @@
   },
   "homepage": "https://github.com/ShawonAshraf/LocalFileServer#readme",
   "dependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
     "express": "^4.16.3",
     "hbs": "^4.0.4",
-    "morgan": "^1.9.1",
-    "rimraf": "^2.6.2"
+    "morgan": "^1.9.1"
   },
   "devDependencies": {
+    "@babel/cli": "^7.5.5",
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
     "expect": "^1.20.2",
     "mocha": "^5.2.0",
     "nodemon": "^1.17.5",
+    "rimraf": "^3.0.0",
     "supertest": "^3.1.0"
   }
 }
