--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "yarn run build && node dist/server.js",
     "start-watch": "nodemon --exec babel-node -- server",
     "build": "rimraf dist/ && babel ./ --out-dir dist/ --ignore ./node_modules,./.babelrc,./package.json,./npm-debug.log --copy-files",
-    "test": "mocha --require babel-core/register ./**/*.test.js --exit",
-    "test-watch": "export NODE_ENV=test && nodemon --exec \"npm test\"",
+    "test": "mocha --require @babel/register ./**/*.test.js --exit",
+    "test-watch": "export NODE_ENV=test && nodemon --exec \"yarn run test\"",
     "eslint-setup": "./node_modules/.bin/eslint --init"
   },
   "repository": "git+https://github.com/ShawonAshraf/LocalFileServer.git",
@@ -30,7 +30,9 @@
   "devDependencies": {
     "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
+    "@babel/node": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
+    "@babel/register": "^7.5.5",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
