--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/ShawonAshraf/LocalFileServer#readme",
   "dependencies": {
+    "@babel/polyfill": "^7.4.4",
     "express": "^4.16.3",
     "express-hbs": "^2.1.2",
     "morgan": "^1.9.1"
